# default-sqlalchemy-setup

./: .gitignore  README.md  setup.cfg
src/sqlalchemy_setup/: __init__.py  base.py  get_or_create.py
src/sqlalchemy_setup/utils/: str_format.py
