[metadata]
name = sqlalchemy_setup
author = Tina
description = Boilerplate code for an opiniated models and session setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/default-sqlalchemy-setup

[options]
# py_modules = sqlalchemy_setup
packages = find:
package_dir = = src


[options.packages.find]
where = src